# hexcect

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml
controller/: Cargo.toml
controller/src/: angle.rs  lib.rs  model.rs  motion.rs
controller/src/model/: angle.rs  dimensional.rs  distance.rs  duration.rs  time.rs  timestamp.rs
controller/src/motion/: fomula.rs
examples/: gyro.rs  multiple_servo.rs  scaled_accel_gyro_value.rs  servo_with_accel_gyro.rs
hardware/: Cargo.toml
hardware/examples/: accel_gyro_cli_viewer.rs  multiple_servo.rs  scaled_accel_gyro_value.rs  servo_with_accel_gyro.rs
hardware/src/: i2c.rs  lib.rs
hardware/src/i2c/: mpu6050.rs  pca9685.rs  register_io.rs
hardware/src/i2c/mpu6050/: error.rs  raw_data.rs  register.rs
hardware/src/i2c/mpu6050/register/: attributes.rs  test_addresses.rs
hardware/src/model/: sensor.rs
hardware/tests/: i2c_register.rs  i2c_threadsafe.rs
hardware/tests/i2c_mock/: mod.rs
measure_units/: Cargo.toml
measure_units/derive/: Cargo.toml
measure_units/derive/src/: approx.rs  calcmix.rs  common.rs  convertible.rs  float_status.rs  lib.rs
measure_units/derive_internal/: Cargo.toml
measure_units/facade/: Cargo.toml
measure_units/facade/src/: lib.rs  (+3 more)
src/: lib.rs  main.rs  util.rs  walk.rs
src/hardware/: i2c.rs  mod.rs
src/measure_units/: angle.rs
src/model/: sensor.rs
src/util/: bit_op.rs  collections.rs
src/walk/: mod.rs
tests/: i2c_register.rs  i2c_threadsafe.rs  register_io.rs
tests/i2c_mock/: mod.rs
util/: Cargo.toml
util/src/: bit_op.rs  collections.rs  lib.rs
(+26 files in other folders)
