[package]
name = "controller"
version = "0.1.4"
edition = "2021"

[dependencies]
hardware = { path = "../hardware" }
measure_units = { path = "../measure_units/facade" }

num-traits = "~0.2"
num-derive = "~0.3"
derive_more = "~0.99"
getset = "~0.1"
nalgebra = "~0.29"
approx = "~0.5"

[dev-dependencies]
rand = "~0.8"
