[package]
name = "hardware"
version = "0.1.3"
edition = "2018"

[dependencies]
util = { path = "../util" }
measure_units = { path = "../measure_units/facade" }

num-traits = "~0.2"
num-derive = "~0.3"
derive_more = "~0.99"
i2cdev = "0.4.4"
pwm-pca9685 = "0.3.1"
linux-embedded-hal = "~0.3"
embedded-hal = "~0.2"
embedded-time = "~0.12"
parking_lot = "~0.11"
lazy_static = "~1.4"
backtrace = "~0.3"

[dev-dependencies]
crossterm = "~0.21"
structopt = "~0.3"
ctrlc = "~3.2"
rand = "~0.8"
